force-app/main/default/objects/Agreement__c/fields/Days_Since_Booking__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Booking__c</fullName>
    <formula>TODAY() - Booking__r.Booking_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Booking</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>