force-app/main/default/objects/Agreement__c/fields/Draft_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Draft_Generated_Date__c</fullName>
    <label>Draft Generated Date</label>
    <type>Date</type>
</CustomField>