force-app/main/default/objects/Agreement__c/fields/ESign_Envelope_Id__c.field-meta.xml
<CustomField>
    <fullName>ESign_Envelope_Id__c</fullName>
    <label>E-Sign Envelope Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>