force-app/main/default/objects/Agreement__c/fields/ESign_Provider__c.field-meta.xml
<CustomField>
    <fullName>ESign_Provider__c</fullName>
    <label>E-Sign Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Stub</fullName><default>true</default><label>Stub</label></value>
            <value><fullName>Leegality</fullName><default>false</default><label>Leegality</label></value>
            <value><fullName>Signdesk</fullName><default>false</default><label>Signdesk</label></value>
            <value><fullName>DocuSign</fullName><default>false</default><label>DocuSign</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>