force-app/main/default/objects/Agreement__c/fields/ESign_Status__c.field-meta.xml
<CustomField>
    <fullName>ESign_Status__c</fullName>
    <label>E-Sign Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Sent</fullName><default>true</default><label>Not Sent</label></value>
            <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
            <value><fullName>Viewed</fullName><default>false</default><label>Viewed</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>