force-app/main/default/objects/Agreement__c/fields/Executed_Copy_Id__c.field-meta.xml
<CustomField>
    <fullName>Executed_Copy_Id__c</fullName>
    <label>Executed Copy Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>