force-app/main/default/objects/Agreement__c/fields/Registration_Fees_Payable__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fees_Payable__c</fullName>
    <label>Registration Fees Payable</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>