force-app/main/default/objects/Agreement__c/fields/Stamp_Duty_Payable__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Payable__c</fullName>
    <label>Stamp Duty Payable</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>