force-app/main/default/objects/Agreement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Started</fullName><default>true</default><label>Not Started</label></value>
            <value><fullName>Draft Generated</fullName><default>false</default><label>Draft Generated</label></value>
            <value><fullName>Sent to Buyer</fullName><default>false</default><label>Sent to Buyer</label></value>
            <value><fullName>e-Sign Initiated</fullName><default>false</default><label>e-Sign Initiated</label></value>
            <value><fullName>Signed</fullName><default>false</default><label>Signed</label></value>
            <value><fullName>Executed</fullName><default>false</default><label>Executed</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>